@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.4.1
-Date: 2018-03-16
+Date: 2018-03-28
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
