@@ -9,6 +9,9 @@ S3method(plot,miHMM)
 S3method(plot,miSum)
 S3method(plot,momentuHMM)
 S3method(plot,momentuHMMData)
+S3method(plotStationary,miHMM)
+S3method(plotStationary,miSum)
+S3method(plotStationary,momentuHMM)
 S3method(print,miHMM)
 S3method(print,miSum)
 S3method(print,momentuHMM)
@@ -20,6 +23,10 @@ S3method(setStateNames,HMMfits)
 S3method(setStateNames,miHMM)
 S3method(setStateNames,miSum)
 S3method(setStateNames,momentuHMM)
+S3method(stationary,miHMM)
+S3method(stationary,miSum)
+S3method(stationary,momentuHMM)
+S3method(summary,momentuHMMData)
 S3method(timeInStates,HMMfits)
 S3method(timeInStates,miHMM)
 S3method(timeInStates,momentuHMM)
@@ -40,6 +47,7 @@ export(plotPR)
 export(plotSat)
 export(plotSpatialCov)
 export(plotStates)
+export(plotStationary)
 export(prepData)
 export(pseudoRes)
 export(setModelName)
@@ -47,6 +55,7 @@ export(setStateNames)
 export(simData)
 export(simObsData)
 export(stateProbs)
+export(stationary)
 export(timeInStates)
 export(viterbi)
 importFrom(Brobdingnag,as.brob)
@@ -145,6 +154,7 @@ importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,qqnorm)
 importFrom(stats,qt)
+importFrom(stats,quantile)
 importFrom(stats,rcauchy)
 importFrom(stats,rexp)
 importFrom(stats,rmultinom)
