@@ -5,5 +5,5 @@ test_that("all examples work correctly",{
 
   expect_error(devtools::run_examples(run=FALSE),NA)
   
-  unlink(paste0("Rplots",1:38,".pdf"))
+  unlink(paste0("Rplots",1:45,".pdf"))
 })
